<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="317dp"
        android:background="@drawable/button"
        android:onClick="signUpButton"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/colorField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.777" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/field"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        tools:layout_editor_absoluteX="105dp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/field"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="245dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_signup"
        android:textSize="45sp"
        android:textColor="@color/colorPrimary"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="143dp" />
</androidx.constraintlayout.widget.ConstraintLayout>